objects/Omega__c.object
<CustomObject>
    <description>Description</description>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Field1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>Field4</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>Field3</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>file__c</fullName>
        <label>file</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>models__c</fullName>
        <label>models</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <label>AB</label>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Omega</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Omega Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Omega</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>